[MIST-228] Fix null return in PhysicalPlanGenerator.generate and improve Exception handling